# HOCH_Haskell_Tools

./: .gitattributes  .gitignore  HOCHHaskellTools.cabal  README.md  configure  stack.yaml
app/: BirdIncubationTime.hs  BoundaryPlot.hs  ExtractBirdExit.hs  Path2HHCOHH.hs  Path2HHCOHHa.hs  PhaseSpaceBirdFrac.hs  PhaseSpaceRoamingFrac.hs  PotentialPicture.hs  ReactionTime.hs  ToHOCPlane.hs
src/: PhaseSpaceSums.hs
src/Formaldehyde/: BirdsNest.hs  Data.hs  Helpers.hs  Invariant.hs  Potential.hs  Properties.hs  RoamingRegion.hs
src/aux/: Makefile  potentialFFI.c  potentialFFI.h
src/aux/jbowman/: bonds.f  getpot.f  h2co-ccsdt.f  h2co-mrci.f
test/: Spec.hs
